--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.17.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "vercel": "^43.0.0"
   },
